changed port number to 1435 with idea that 1434 will be 2019 and 1433 2017

--- a/docker-compose-mssql-2022.yml
+++ b/docker-compose-mssql-2022.yml
@@ -1,5 +1,7 @@
 # Use this file to create/run docker container of Microsoft SQL Server 
 
+# >>carefully note the port number as it may have changed
+
 # >>Running and Stopping
 # Starting the container from the same directory:  docker-compose  -f docker-compose-mssql-2022.yml up -d
 # Stopping the container from the same directory:  docker-compose  -f docker-compose-mssql-2022.yml down 
@@ -12,7 +14,7 @@
 # >>Connecting to MS SQL Server; Example based on Azure Data Studio--This just an example; for instance, a connection string will also work
 # Connection type:  Microsoft SQL Server
 # Parameters: yes
-# Server: host.docker.internal,1434   >> Note that the port number is as specified in the ports section of this file.  It is the number before the colon
+# Server: host.docker.internal,1435   >> Note that the port number is as specified in the ports section of this file.  It is the number before the colon
 # Authentication type: SQL Login
 # User name: sa
 #   Note:  The username "sa" is the system administrator account for Microsoft SQL Server. It is a built-in account that is created when SQL Server is installed. 
@@ -33,7 +35,7 @@ services:
     container_name: sql-server-db-222
     image: mcr.microsoft.com/mssql/server:2022-latest
     ports:
-      - "1434:1433"
+      - "1435:1433"
     environment:
       MSSQL_SA_PASSWORD: aZ1bY3!@#cX5
       ACCEPT_EULA: "Y"
